--- a/main.html
+++ b/main.html
@@ -8,8 +8,46 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<form method="post">
+		<label for="name">Name</label>
+		<input id="name" placeholder="Name" type="text" name="name" required/>
+		<label for="email">Email</label>
+		<input id="email" placeholder="Email" type="email" name="email" required/>
+		<label for="gender_m">male</label>
+		<input type="radio" id="gender_m" required />
+		<label for="gender_f">female</label>
+		<input type="radio" id="gender_f" required />
+		<label for="cars">Car Brands</label>
+		<select id="cars" required>
+			<option value="" disabled  selected>--Please choose an option--</option>
+			<option value="audi">Audi</option>
+			<option value="mercedies">Mercedies</option>
+		</select>		
+		<label for="age">Age</label>
+		<input id="age" placeholder="Age" type="number" name="age" required/>
+		<label for="dob">DOB</label>
+		<input id="dob" placeholder="Date" type="date" name="dob" required/>
+		<label for="tel">Phone Number</label>
+		<input id="tel" placeholder="xxx-xxx-xxxx" type="Tel" name="tel" />	
+		<label for="password">Password</label>
+		<input id="password" placeholder="Password" type="password" name="password" required/>
+		<label for="tos">I agree to the TOS</label>
+		<input type="checkbox" required id="tos" name="tos" value="Yes" />
+		<!-- <input type="checkbox" required id="tos" name="tos" value="No" /> -->
+		<button type="submit"></button>
+	</form>
+
+
+
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
+	
 
 </body>
 
