--- a/main.html
+++ b/main.html
@@ -15,9 +15,9 @@
 		<label for="email">Email</label>
 		<input id="email" placeholder="Email" type="email" name="email" required/>
 		<label for="gender_m">male</label>
-		<input type="radio" id="gender_m" required />
+		<input type="radio" id="gender_m" name="gender" required />
 		<label for="gender_f">female</label>
-		<input type="radio" id="gender_f" required />
+		<input type="radio" id="gender_f" name="gender"  required />
 		<label for="cars">Car Brands</label>
 		<select id="cars" required>
 			<option value="" disabled  selected>--Please choose an option--</option>
